Uzupełnione controlery projektu o obłsugę błeów. Poprawki w API
