# gui/backend-swagger/openapi_server/controllers/project_management_controller.py
@@ -1,4 +1,5 @@
 import connexion
+from connexion.exceptions import ProblemException
 import six
 
 from openapi_server.models.project import Project  # noqa: E501
@@ -6,6 +7,9 @@ from openapi_server import util
 
 from pathlib import Path
 import json
+import slugify
+import os
+import shutil
 
 project_path = "../../examples"
 
@@ -19,9 +23,30 @@ def add_project(project=None):  # noqa: E501
 
     :rtype: Project
     """
-    if connexion.request.is_json:
-        project = Project.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+
+    try:
+        if connexion.request.is_json:
+            project = Project.from_dict(connexion.request.get_json())  # noqa: E501
+            project.id = slugify.slugify(project.id, lowercase=True, separator="_")
+        
+            if os.path.exists(os.path.join(project_path, project.id, "config.json")):
+                raise FileExistsError
+
+            if not os.path.exists(os.path.join(project_path, project.id)):  
+                os.mkdir(os.path.join(project_path, project.id))
+
+            config = {}
+            config['name'] = project.name
+            config['desc'] = project.description
+            with open(os.path.join(project_path, project.id, "config.json"), 'w') as f:
+                json.dump(config, f)
+        else:
+            raise ProblemException(405, "Invalid input")
+      
+    except FileExistsError as e:
+        raise ProblemException(409, "Project exists")  
+
+    return project
 
 
 def delete_project(project_id):  # noqa: E501
@@ -34,7 +59,16 @@ def delete_project(project_id):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    try:
+        if not os.path.exists(os.path.join(project_path, project_id, "config.json")):
+            raise FileNotFoundError
+
+        shutil.rmtree(os.path.join(project_path, project_id))
+
+    except FileNotFoundError as e:
+        raise ProblemException(404, "Project not exists", str(e))
+
+    return 'Deleted', 200
 
 
 def get_project(project_id):  # noqa: E501
@@ -47,16 +81,20 @@ def get_project(project_id):  # noqa: E501
 
     :rtype: Project
     """
-
-    response = []
-    pathlist = list(Path(project_path).glob(f'**/{project_id}/config.json'))
-    if len(pathlist) != 1:
-        return connexion.NoContent, 404
-    else:
-        with open(pathlist[0], "rb") as f:
-            config = json.load(f)
-        prj = Project(pathlist[0].parent.name, config.get("desc", "no description"))
-        return prj
+    try:
+        response = []
+        pathlist = list(Path(project_path).glob(f'**/{project_id}/config.json'))
+        if len(pathlist) != 1:
+            raise FileNotFoundError
+        else:
+            with open(pathlist[0], "rb") as f:
+                config = json.load(f)
+            prj = Project(pathlist[0].parent.name, config.get("name", pathlist[0].parent.name), config.get("desc", "no description"))
+            return prj
+    except FileNotFoundError as e:
+        raise ProblemException(404, "Project not exists", str(e))
+        
+    return 'Deleted', 200            
 
 
 def list_projects():  # noqa: E501
@@ -67,20 +105,19 @@ def list_projects():  # noqa: E501
 
     :rtype: List[Project]
     """
-
     response = []
     pathlist = Path(project_path).glob('**/*/config.json')
     for path in pathlist:
         print(path.parent.name)
         with open(path, "rb") as f:
             config = json.load(f)
-        prj = Project(path.parent.name, config.get("desc", "no description"))
+        prj = Project(path.parent.name, config.get("name", path.parent.name), config.get("desc", "no description"))
         response.append(prj)
 
     return response
 
 
-def update_project(project_id, project=None):  # noqa: E501
+def update_project(project=None):  # noqa: E501
     """Updates a Project
 
      # noqa: E501
@@ -92,6 +129,20 @@ def update_project(project_id, project=None):  # noqa: E501
 
     :rtype: Project
     """
-    if connexion.request.is_json:
-        project = Project.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+    try:
+        if connexion.request.is_json:
+            project = Project.from_dict(connexion.request.get_json())  # noqa: E501
+        
+            with open(os.path.join(project_path, project.id, "config.json"), 'r') as f:
+                config = json.load(f)
+           
+            config['name'] = project.name
+            config['desc'] = project.description
+            with open(os.path.join(project_path, project.id, "config.json"), 'w') as f:
+                json.dump(config, f)
+        else:
+            return connexion.NoContent, 400    
+    except FileNotFoundError as e:
+        raise ProblemException(404, "Project not exists", str(e))
+
+    return project
