# gui/backend-swagger/openapi_server/openapi/openapi.yaml
@@ -37,12 +37,8 @@ paths:
                   $ref: '#/components/schemas/Project'
                 type: array
           description: OK
-        "400":
-          description: Invalid ID supplied
-        "404":
-          description: Project not found
-        "405":
-          description: Validation exception
+        "500":
+          description: Internal error
       summary: Get list of projects
       tags:
       - project_management
@@ -51,9 +47,10 @@ paths:
       operationId: add_project
       requestBody:
         content:
-          '*/*':
+          application/json:
             schema:
               $ref: '#/components/schemas/Project'
+        required: true
       responses:
         "200":
           content:
@@ -61,28 +58,24 @@ paths:
               schema:
                 $ref: '#/components/schemas/Project'
           description: OK
-        "405":
+        "400":
           description: Invalid input
+        "409":
+          description: Alredy exists
+        "500":
+          description: Internal error
       summary: Adding new project
       tags:
       - project_management
       x-openapi-router-controller: openapi_server.controllers.project_management_controller
     put:
       operationId: update_project
-      parameters:
-      - description: ID of Project that needs to be updated
-        explode: false
-        in: path
-        name: projectId
-        required: true
-        schema:
-          type: string
-        style: simple
       requestBody:
         content:
-          '*/*':
+          application/json:
             schema:
               $ref: '#/components/schemas/Project'
+        required: true
       responses:
         "200":
           content:
@@ -90,10 +83,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Project'
           description: OK
+        "400":
+          description: Invalid input
         "404":
           description: Project not found
-        "405":
-          description: Invalid input
+        "500":
+          description: Internal error
       summary: Updates a Project
       tags:
       - project_management
@@ -112,9 +107,11 @@ paths:
         style: simple
       responses:
         "400":
-          description: Invalid ID supplied
+          description: Invalid input
         "404":
           description: Project not found
+        "500":
+          description: Delete error
       summary: Deletes a Project
       tags:
       - project_management
@@ -139,9 +136,11 @@ paths:
                 $ref: '#/components/schemas/Project'
           description: OK
         "400":
-          description: Invalid ID supplied
+          description: Invalid input
         "404":
           description: Project not found
+        "500":
+          description: Intrenal error
       summary: Find Project by ID
       tags:
       - project_management
@@ -601,6 +600,46 @@ paths:
         schema:
           type: string
         style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Module'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Module'
+          description: OK
+        "400":
+          description: Invalid ProjectID supplied
+        "404":
+          description: Project definition not found
+        "405":
+          description: Validation exception
+      summary: Add module to project
+      tags:
+      - project_editor
+      x-openapi-router-controller: openapi_server.controllers.project_editor_controller
+    put:
+      operationId: update_module
+      parameters:
+      - description: ID of Project
+        explode: false
+        in: path
+        name: projectId
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Module'
+        required: true
       responses:
         "200":
           content:
@@ -741,7 +780,7 @@ paths:
         style: simple
       requestBody:
         content:
-          '*/*':
+          application/json:
             schema:
               $ref: '#/components/schemas/ModuleParam'
       responses:
@@ -799,12 +838,18 @@ paths:
         schema:
           type: string
         style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Queue'
+        required: true
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Module'
+                $ref: '#/components/schemas/Queue'
           description: OK
         "400":
           description: Invalid ID supplied
@@ -827,12 +872,18 @@ paths:
         schema:
           type: string
         style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Queue'
+        required: true
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Module'
+                $ref: '#/components/schemas/Queue'
           description: OK
         "400":
           description: Invalid ID supplied
@@ -1153,6 +1204,8 @@ components:
         description:
           title: description
           type: string
+      required:
+      - id
       title: ModuleDef
       type: object
     ModuleParamDef:
@@ -1186,6 +1239,9 @@ components:
           - resource
           title: type
           type: string
+      required:
+      - id
+      - type
       title: ModuleParamDef
       type: object
     QueueParamDef:
@@ -1207,20 +1263,32 @@ components:
           - region_list
           - resource
           type: string
+      required:
+      - id
+      - type
       type: object
     Project:
       description: List of directories containing config.json with data from that
         files
       example:
-        comment: comment
+        name: name
+        description: description
         id: id
       properties:
         id:
+          nullable: false
           title: id
           type: string
-        comment:
-          title: comment
+        name:
+          nullable: false
+          title: name
           type: string
+        description:
+          title: description
+          type: string
+      required:
+      - id
+      - name
       title: Project
       type: object
     Module:
@@ -1232,7 +1300,8 @@ components:
           name: name
           task_queue_timeout: 1
           project:
-            comment: comment
+            name: name
+            description: description
             id: id
           task_queue_limit: 0
         input:
@@ -1241,7 +1310,8 @@ components:
           name: name
           task_queue_timeout: 1
           project:
-            comment: comment
+            name: name
+            description: description
             id: id
           task_queue_limit: 0
         module_def:
@@ -1250,10 +1320,15 @@ components:
           id: id
         name: name
         project:
-          comment: comment
+          name: name
+          description: description
           id: id
         comment: comment
+        id: id
       properties:
+        id:
+          title: id
+          type: string
         module_def:
           $ref: '#/components/schemas/ModuleDef'
         project:
@@ -1266,8 +1341,11 @@ components:
           title: name
           type: string
         comment:
+          readOnly: true
           title: comment
           type: string
+      required:
+      - id
       title: Module
       type: object
     ModuleParam:
@@ -1281,7 +1359,8 @@ components:
             name: name
             task_queue_timeout: 1
             project:
-              comment: comment
+              name: name
+              description: description
               id: id
             task_queue_limit: 0
           input:
@@ -1290,7 +1369,8 @@ components:
             name: name
             task_queue_timeout: 1
             project:
-              comment: comment
+              name: name
+              description: description
               id: id
             task_queue_limit: 0
           module_def:
@@ -1299,9 +1379,11 @@ components:
             id: id
           name: name
           project:
-            comment: comment
+            name: name
+            description: description
             id: id
           comment: comment
+          id: id
         param_def:
           module_def:
             name: name
@@ -1328,7 +1410,8 @@ components:
         name: name
         task_queue_timeout: 1
         project:
-          comment: comment
+          name: name
+          description: description
           id: id
         task_queue_limit: 0
       properties:
@@ -1359,7 +1442,8 @@ components:
           name: name
           task_queue_timeout: 1
           project:
-            comment: comment
+            name: name
+            description: description
             id: id
           task_queue_limit: 0
         param_def:
@@ -1384,7 +1468,8 @@ components:
     Instance:
       example:
         project:
-          comment: comment
+          name: name
+          description: description
           id: id
         id: id
       properties:
@@ -1399,7 +1484,8 @@ components:
       example:
         project_instance:
           project:
-            comment: comment
+            name: name
+            description: description
             id: id
           id: id
         module:
@@ -1409,7 +1495,8 @@ components:
             name: name
             task_queue_timeout: 1
             project:
-              comment: comment
+              name: name
+              description: description
               id: id
             task_queue_limit: 0
           input:
@@ -1418,7 +1505,8 @@ components:
             name: name
             task_queue_timeout: 1
             project:
-              comment: comment
+              name: name
+              description: description
               id: id
             task_queue_limit: 0
           module_def:
@@ -1427,9 +1515,11 @@ components:
             id: id
           name: name
           project:
-            comment: comment
+            name: name
+            description: description
             id: id
           comment: comment
+          id: id
         id: id
       properties:
         id:
@@ -1445,7 +1535,8 @@ components:
       example:
         project_instance:
           project:
-            comment: comment
+            name: name
+            description: description
             id: id
           id: id
         id: id
@@ -1455,7 +1546,8 @@ components:
           name: name
           task_queue_timeout: 1
           project:
-            comment: comment
+            name: name
+            description: description
             id: id
           task_queue_limit: 0
       properties:
@@ -1477,7 +1569,8 @@ components:
             name: name
             task_queue_timeout: 1
             project:
-              comment: comment
+              name: name
+              description: description
               id: id
             task_queue_limit: 0
           input:
@@ -1486,7 +1579,8 @@ components:
             name: name
             task_queue_timeout: 1
             project:
-              comment: comment
+              name: name
+              description: description
               id: id
             task_queue_limit: 0
           module_def:
@@ -1495,9 +1589,11 @@ components:
             id: id
           name: name
           project:
-            comment: comment
+            name: name
+            description: description
             id: id
           comment: comment
+          id: id
         url: ""
       properties:
         project:
